[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsah"
version = "0.1.0"
description = "Tree, serializer, actions, and CFRunLoop-backed observer helpers for macOS Accessibility"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ray + Codex" }]
keywords = ["accessibility", "axuielement", "macos", "automation"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.scripts]
tsah = "tsah.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["tsah*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
